# vtk

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
bot/: main.py
cli/: __main__.py  main.py
core/: __init__.py  converters.py  happ.py  happdecrypt.py  logic.py  reverse.py  settings.py
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
tests/: conftest.py  test_logic.py
web/: main.py
